src/Chirp/wwwroot/css/site.css
input[type=text], input[type=password], textarea {
    width: 150px;
}

#main {
    background-color: #eee;
    padding: 4px;
    margin: 0;
}

#footer{
    background-color: #222;
    color: #eee;
    position: fixed;
    width: 100%;
    bottom: 0;
}

.profilepicture{
    max-width:50px;
    border: 1px solid #eee;
    padding: 4px;
    margin: 0;
}

#sidebar{
    background: #2a2c36;
    color: #eee;
    position: fixed;
    height: 100%;
    width: 250px;
    overflow: hidden;
    left: 0;
    margin: 0;
}

#wrapper{
    margin: 0 0 0 250px;
}

#chirp-form {
    background-color: #68d8f2;
    border: solid medium;
    border-color: #02c9f6;

    padding: 4px;
    margin: 0;
}

#post-stream {
    background-color: #e2eff2;
    border: solid medium;
    border-color: #bce7f1;

    padding: 4px;
    margin: 0;
}

.submit-btn {
	background-color: #b1dbff;
	margin: 10px 0 10px 0;
}

.post {
	padding: 10px;
	margin-bottom: 5px;
	border-radius: 5px;
    border: thin;
    border-color: #82caf3;
}

.odd {
	background-color: #c4e1fa;
	
}
.even {
	background-color: #daebf8;
}

